# IZ1

./: CMakeLists.txt  List.c  List.h  README.md  Warships.c  Warships.gcno  main.c  tests.cpp
.github/workflows/: ci_tests.yml
dynamic_lib/: parallel.c  parallel.h
functions_static/: functions.c  functions.h
include/: Warships.h  parallel.h  sequential.h
src/: List.c  Warships.c  functions.c  main.c  parallel.c  sequential.c
static_lib/: sequential.c  sequential.h
tests/: test_array_10000_20.txt  test_array_5000_5.txt  test_vector_100.txt  test_vector_20.txt  test_vector_5.txt  test_vector_generated_file.txt  tests.cpp
